--- a/app/src/main/res/layout/activity_hpdetail.xml
+++ b/app/src/main/res/layout/activity_hpdetail.xml
@@ -221,18 +221,12 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_margin="10dp">
 
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="5">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                    android:layout_gravity="center">
 
                     <Button
                         android:id="@+id/prescribe_btn"
@@ -247,11 +241,18 @@
                         android:text="Submit Prescription"
                         android:textColor="@color/colorWhite" />
 
-                    <TextView
+                    <Button
+                        android:id="@+id/skip_btn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:layout_weight="2"
+                        android:background="@color/colorTomato"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:text="Skip Patient"
+                        android:textColor="@color/colorWhite" />
                 </TableRow>
             </TableLayout>
         </LinearLayout>
