--- a/app/src/main/res/layout/activity_hpdetail.xml
+++ b/app/src/main/res/layout/activity_hpdetail.xml
@@ -24,7 +24,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:gravity="right"
-                android:text="version: 1.1"
+                android:text="version: 1.3"
                 android:textColor="@color/colorPrimary" />
 
             <TextView
@@ -238,7 +238,7 @@
                         android:background="@color/colorBlue"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:text="Submit Prescription"
+                        android:text="Prescribe"
                         android:textColor="@color/colorWhite" />
 
                     <Button
@@ -251,7 +251,20 @@
                         android:background="@color/colorTomato"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:text="Skip Patient"
+                        android:text="Skip"
+                        android:textColor="@color/colorWhite" />
+
+                    <Button
+                        android:id="@+id/reject_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:layout_weight="2"
+                        android:background="@color/darkRed"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:text="Reject"
                         android:textColor="@color/colorWhite" />
                 </TableRow>
             </TableLayout>
