--- a/app/src/main/res/layout/activity_hpdetail.xml
+++ b/app/src/main/res/layout/activity_hpdetail.xml
@@ -194,17 +194,41 @@
                 </TableRow>
             </TableLayout>
 
-            <Button
-                android:id="@+id/call_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:background="@color/colorBlack"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="Call Patient"
-                android:textColor="@color/colorWhite" />
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/call_volunteer_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:background="@color/colorBlack"
+                        android:paddingLeft="10dp"
+                        android:layout_weight="1"
+                        android:paddingRight="10dp"
+                        android:text="Call Volunteer"
+                        android:textColor="@color/colorYellow" />
+
+                    <Button
+                        android:id="@+id/call_patient_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="5dp"
+                        android:background="@color/colorBlack"
+                        android:paddingLeft="10dp"
+                        android:layout_weight="1"
+                        android:paddingRight="10dp"
+                        android:text="Call Patient"
+                        android:textColor="@color/colorWhite" />
+                </TableRow>
+            </TableLayout>
 
             <EditText
                 android:id="@+id/remarks_et"
