--- a/app/src/main/res/layout/dialog_reason.xml
+++ b/app/src/main/res/layout/dialog_reason.xml
@@ -13,8 +13,7 @@
         android:layout_margin="5dp"
         android:textSize="20sp"
         android:padding="5dp"
-        android:background="@color/darkRed"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorBlue"
         android:text="Mention a reason" />
 
     <TableLayout
@@ -55,18 +54,18 @@
                 android:id="@+id/ok_btn_dlg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@color/colorBlue"
+                android:background="@color/colorTomato"
                 android:textColor="@color/colorWhite"
                 android:layout_weight="1"
                 android:layout_margin="5dp"
-                android:text="Submit" />
+                android:text="Reject" />
 
             <Button
                 android:id="@+id/cancel_btn_dlg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@color/colorTomato"
-                android:textColor="@color/colorWhite"
+                android:background="@color/colorGray"
+                android:textColor="@color/colorBlack"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:text="Cancel" />
