--- a/app/src/main/res/layout/activity_hpdetail.xml
+++ b/app/src/main/res/layout/activity_hpdetail.xml
@@ -24,7 +24,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:gravity="right"
-                android:text="version: 1.4"
+                android:text=""
                 android:textColor="@color/colorPrimary" />
 
             <TextView
