--- a/app/src/main/res/layout/activity_hpdetail.xml
+++ b/app/src/main/res/layout/activity_hpdetail.xml
@@ -50,7 +50,7 @@
                     android:layout_gravity="left"
                     android:layout_weight="1"
                     android:gravity="left"
-                    android:text="Todays count: "
+                    android:text="Todays count: 0"
                     android:textColor="@color/colorOrange" />
 
                 <TextView
@@ -60,7 +60,7 @@
                     android:layout_gravity="right"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="Month count: "
+                    android:text="Month count: 0"
                     android:textColor="@color/colorOrange" />
             </LinearLayout>
 
